--- a/FactorialLibrary/FactorialLibrary.csproj
+++ b/FactorialLibrary/FactorialLibrary.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8C930BCA-4A0E-4C0E-9A05-E38C55D10C4B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{94B81081-5F6A-4B88-964B-5531763BEB70}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReactCalc</RootNamespace>
-    <AssemblyName>ReactCalc</AssemblyName>
+    <RootNamespace>FactorialLibrary</RootNamespace>
+    <AssemblyName>FactorialLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,19 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calc.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="FactorialOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FactorialLibrary\FactorialLibrary.csproj">
-      <Project>{94b81081-5f6a-4b88-964b-5531763beb70}</Project>
-      <Name>FactorialLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="CalcBase\CalcBase.csproj">
+    <ProjectReference Include="..\ReactCalc\CalcBase\CalcBase.csproj">
       <Project>{481c9e98-9aa0-49a2-a833-e4e592c7a778}</Project>
       <Name>CalcBase</Name>
     </ProjectReference>
