--- a/AdditionalLibrary/AdditionalLibrary.csproj
+++ b/AdditionalLibrary/AdditionalLibrary.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{481C9E98-9AA0-49A2-A833-E4E592C7A778}</ProjectGuid>
+    <ProjectGuid>{26DA2363-E46F-42AA-8449-CF53E8E2C2F1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalcBase</RootNamespace>
-    <AssemblyName>CalcBase</AssemblyName>
+    <RootNamespace>AdditionalLibrary</RootNamespace>
+    <AssemblyName>AdditionalLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,13 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\DifOperation.cs" />
-    <Compile Include="Models\DivOperation.cs" />
-    <Compile Include="Models\IOperation.cs" />
-    <Compile Include="Models\MulOperation.cs" />
-    <Compile Include="Models\Operation.cs" />
-    <Compile Include="Models\SumOperation.cs" />
+    <Compile Include="AdditionalOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ReactCalc\CalcBase\CalcBase.csproj">
+      <Project>{481c9e98-9aa0-49a2-a833-e4e592c7a778}</Project>
+      <Name>CalcBase</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
